{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 82,
  "lineage": "b3d09dc8-6d31-e1d8-5806-ccb028b17117",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:276718525576:internet-gateway/igw-02dc3bf00501faf63",
            "id": "igw-02dc3bf00501faf63",
            "owner_id": "276718525576",
            "tags": {
              "Name": "myigw"
            },
            "vpc_id": "vpc-039c9bcd0f6a14f94"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c2ac5589b92e1ef0",
            "owner_id": "276718525576",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02dc3bf00501faf63",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-039c9bcd0f6a14f94"
          },
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aff5ea437ff63e72",
            "route_table_id": "rtb-0c2ac5589b92e1ef0",
            "subnet_id": "subnet-095073b31a6b1b7d7"
          },
          "dependencies": [
            "aws_route_table.publicrt",
            "aws_subnet.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "br",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db711122e16e1cf5",
            "route_table_id": "rtb-0c2ac5589b92e1ef0",
            "subnet_id": "subnet-01592a778f3decfdc"
          },
          "dependencies": [
            "aws_route_table.publicrt",
            "aws_subnet.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:276718525576:security-group/sg-05d76a6bca1a705df",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d76a6bca1a705df",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.167.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_eks",
            "name_prefix": "",
            "owner_id": "276718525576",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-039c9bcd0f6a14f94"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:276718525576:subnet/subnet-095073b31a6b1b7d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.167.1.0/24",
            "id": "subnet-095073b31a6b1b7d7",
            "map_public_ip_on_launch": false,
            "owner_id": "276718525576",
            "tags": {
              "Name": "app"
            },
            "vpc_id": "vpc-039c9bcd0f6a14f94"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:276718525576:subnet/subnet-01592a778f3decfdc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "192.167.2.0/24",
            "id": "subnet-01592a778f3decfdc",
            "map_public_ip_on_launch": false,
            "owner_id": "276718525576",
            "tags": {
              "Name": "web"
            },
            "vpc_id": "vpc-039c9bcd0f6a14f94"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:276718525576:vpc/vpc-039c9bcd0f6a14f94",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.167.0.0/16",
            "default_network_acl_id": "acl-08ebeafcade2fe01e",
            "default_route_table_id": "rtb-033f87c4a21ff12b6",
            "default_security_group_id": "sg-071e0d767d48c5796",
            "dhcp_options_id": "dopt-872665ff",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-039c9bcd0f6a14f94",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-033f87c4a21ff12b6",
            "owner_id": "276718525576",
            "tags": {
              "Name": "myvpc"
            }
          }
        }
      ]
    }
  ]
}